Set program name for usage